--- a/Maanfee.JsInterop/Maanfee.JsInterop.csproj
+++ b/Maanfee.JsInterop/Maanfee.JsInterop.csproj
@@ -13,10 +13,10 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <!--**********************************************-->
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Copyright>Copyright (c) 2025 Maanfee</Copyright>
+    <Copyright>Copyright (c) 2025-2026 Maanfee</Copyright>
     <Authors>Maanfee Team (MF)</Authors>
     <Company>Maanfee</Company>
-    <Version>1.2.1</Version>
+    <Version>1.10.0</Version>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
@@ -30,9 +30,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="10.0.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0" />
-    <PackageReference Include="Microsoft.JSInterop" Version="10.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="10.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.1" />
+    <PackageReference Include="Microsoft.JSInterop" Version="10.0.1" />
   </ItemGroup>
 
   <ItemGroup>
